--- a/scss/editor/headings/_headings-color.scss
+++ b/scss/editor/headings/_headings-color.scss
@@ -10,7 +10,7 @@
 }
 .fas-headings-accent,
 .headings-accent {
-    --header-gradient-base-color: var(--color-accent);
+    --header-gradient-base-color: var(--text-accent);
 }
 
 .fas-headings-hue,
